# haystack-mistralai

./: LICENSE  README.md  pyproject.toml
src/haystack_mistralai/: MistralAIGenerator.py  __init__.py
